<resources>
    <string name="app_name" translatable="false">NextGIS Logger</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">About</string>
    <string name="app_support">Support</string>
    <string name="app_ngw">Sync with nextgis.com</string>
    <string name="app_help">Help</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="title_activity_info">Live data</string>
    <string name="intro1">Welcome to NextGIS Logger!\n\nThis app can:\n* Collect data from various external sources in an automated fashion\n* Get readings from cell towers, GPS, accelerometer, gyro and other sensors\n* Add user markers along the log\n* Save as CSV and upload to the cloud\nand much more!</string>
    <string name="intro2">Log in to get the most out of this app, synchronize your data and get regular updates (commercial plan is needed http://nextgis.com/pricing/). You can sign in later in Settings.</string>
    <string name="copyright"><![CDATA[© <a href=\"http://nextgis.com\">NextGIS</a>, 2014–2017]]></string>
    <string name="about_info">This app collects cell and sensors (orientation, accelerometer, gyroscope, etc) data continiously and at specified points (markers).</string>
    <string name="about_license_info" translatable="false"><a href="http://www.gnu.org/licenses/">GPL v2</a></string>
    <string name="credits_intro">Credits</string>
    <string name="credits" translatable="false"><b><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0:</a></b>\n<a href="https://github.com/TechFreak/WizardPager">Wizard Pager</a>\n\n<b><a href="http://opensource.org/licenses/MIT">The MIT License:</a></b>\n<a href="https://github.com/makovkastar/FloatingActionButton">Floating Action Button</a>\n\n<b><a href="http://www.boost.org/LICENSE_1_0.txt">Boost Software License 1.0:</a></b>\n<a href="http://github.com/4eRTuk/sfcdialog">Simple File Chooser Dialog</a></string>
    <string name="email">Email</string>
    <string name="email_src">info@nextgis.com</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_src">\@nextgis_support</string>
    <string name="github">Github</string>
    <string name="github_src">http://github.com/nextgis/nextgislogger/issues</string>
    <string name="web">Website</string>
    <string name="web_src">http://nextgis.com/nextgis-logger</string>
    <string name="not_installed">Application not installed</string>
    <string name="settings_sensors">Sensors</string>
    <string name="settings_main">Main</string>
    <string name="settings_external">External</string>
    <string name="settings_account">Web GIS</string>
    <string name="settings_internal">Internal</string>
    <string name="settings_period">Set Period (sec)</string>
    <string name="settings_period_sum">"Current is "</string>
    <string name="settings_period_toast">Min is 1, max is 3600</string>
    <string name="settings_cells_api17">Try use API 17+ to find nearby cells</string>
    <string name="settings_cells_api17_sum">Available on Android 4.2+\r\nCould help for some devices if cells data doesn\'t collect</string>
    <string name="settings_cats">Use categories file</string>
    <string name="settings_cats_sum">Mark name presets for text field</string>
    <string name="settings_cat_path">Load mark name presets from file…</string>
    <string name="settings_marks">Marks</string>
    <string name="settings_mark_vol">Use vol +/- buttons</string>
    <string name="settings_mark_vol_sum">Save previous/next mark</string>
    <string name="settings_user_name">Identification string (optional)</string>
    <string name="settings_keep_screen">Keep screen on</string>
    <string name="settings_keep_screen_sum">Screen does not turn off automatically at Markers and Live data screens</string>
    <string name="settings_sensor_mode_sum">Without gravity of Earth (in all dims)</string>
    <string name="settings_sensor_sum">Sensor is not supported</string>
    <string name="service_notif_title">NextGIS Logger</string>
    <string name="service_notif_text">Logger is running…</string>
    <string name="btn_service_start">Start Logger</string>
    <string name="btn_service_stop">Stop Logger</string>
    <string name="logger_started">Logger started:</string>
    <string name="logger_finished">Logger finished:</string>
    <string name="records_collected">Records collected:</string>
    <string name="marks_collected">Marks collected:</string>
    <string name="service_running">running</string>
    <string name="service_stopped">stopped</string>
    <string name="network_type">Network type</string>
    <string name="btn_save_mark">Markers</string>
    <string name="tv_modes">MODES</string>
    <string name="session_name">Session name:</string>
    <string name="session_incorrect_name">"Incorrect char "</string>
    <string name="session_null_name">Name can not be blank</string>
    <string name="sessions_start_fail">Can not start new session</string>
    <string name="btn_session_open">New</string>
    <string name="btn_session_close">Close</string>
    <string name="btn_sessions_manage">Manage</string>
    <string name="session_close_first">Please close current session first</string>
    <string name="session_bad">Wrong session. Please try to reopen new one.</string>
    <string name="scl_current_session">current session</string>
    <string name="delete_sessions_done">Sessions deleted</string>
    <string name="delete_sessions_title">Delete sessions…</string>
    <string name="share_sessions_title">Share sessions…</string>
    <string name="sessions_nothing_selected">Nothing is selected</string>
    <string name="sessions_select_all">Select all</string>
    <string name="sessions_delete_current">Current session will be stopped and deleted too.</string>
    <string name="mstdt">All-In-One (CSV)</string>
    <string name="mstds">Marks along with Service; Data separated (CSV)</string>
    <string name="mssdt">Marks separated with Service; Data together (CSV)</string>
    <string name="mssds">All separated (CSV)</string>
    <string name="gpx">Only GPS-track (GPX)</string>
    <string name="export_title">Export</string>
    <string name="preparing">Preparing data…</string>
    <string name="ext_media_unmounted_msg">External Media is NOT MOUNTED</string>
    <string name="fs_error_msg">File system ERROR.</string>
    <string name="error_401">Authorization required</string>
    <string name="cancel_download">Download canceled</string>
    <string name="update_new">Version %1$s found. Would you like to update?</string>
    <string name="update_title">Update?</string>
    <string name="update_check">Check updates</string>
    <string name="update_no">No updates found</string>
    <string name="sensor_disabled">No active sensors.</string>
    <string name="sensor_error">"No sensors found: "</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_linear">Linear accelerometer</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_magnetic">Magnetometer</string>
    <string name="sensor_orientation">Orientation</string>
    <string name="gps">GPS</string>
    <string name="mic">Audio (mic)</string>
    <string name="mic_delta">Calibrate audio</string>
    <string name="external_data">Enable external data</string>
    <string name="external_data_sum">Supports only Arduino now</string>
    <string name="external_device">Select Bluetooth paired device</string>
    <string name="external_paired">Paired devices:</string>
    <string name="external_disabled">External data is disabled.</string>
    <string name="external_bt_disabled">Bluetooth is disabled.</string>
    <string name="external_goto_settings">Check settings</string>
    <string name="external_not_found">Can not connect to %s. Device not found or connection timeout.</string>
    <string name="external_device_name">external device</string>
    <string name="external_connecting">Connecting to %s…</string>
    <string name="external_connected">Connected to %s</string>
    <string name="external_retry">Retry</string>
    <string name="cat_file_error">Wrong categories file structure</string>
    <string name="cat_file_empty">Presets file is empty</string>
    <string name="cat_id_not_int">ID column must be positive integer</string>
    <string name="cat_split_error">Must be two columns splitted by \',\'!</string>
    <string name="error_no_file">No file selected</string>
    <string name="file_loaded">"Loaded from "</string>
    <string name="cat_name_empty">Mark name can\'t be empty</string>
    <string name="menu_search">Markers</string>
    <string name="mark_editor_hint">Enter Name of Mark</string>
    <string name="mark_saved">Mark %s saved</string>
    <string name="mark_undo">Last mark deleted</string>
    <string name="mark_no_items">No more items</string>
    <string name="mark_new">Add new mark</string>
    <string name="mark_edit">Edit mark</string>
    <string name="mark_tap_to_edit">Long press to edit</string>
    <string name="mark_id">ID</string>
    <string name="mark_name">Name</string>
    <string name="mark_save_preset">Save to preset</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="choose_file_dialog">Select presets file</string>
    <string name="info_title_network">Network</string>
    <string name="info_title_sensors">Sensors</string>
    <string name="info_title_external">External</string>
    <string name="info_na" translatable="false">n/a</string>
    <string name="info_mnc" translatable="false">"MNC: "</string>
    <string name="info_mcc" translatable="false">"MCC: "</string>
    <string name="info_lac" translatable="false">"LAC: "</string>
    <string name="info_cid" translatable="false">"CID: "</string>
    <string name="info_psc" translatable="false">"PSC: "</string>
    <string name="info_tac" translatable="false">"TAC: "</string>
    <string name="info_pci" translatable="false">"PCI: "</string>
    <string name="info_ci" translatable="false">"CI: "</string>
    <string name="info_power" translatable="false">"Power: "</string>
    <string name="info_roaming">roaming</string>
    <string name="info_lat">Latitude</string>
    <string name="info_lon">Longitude</string>
    <string name="info_ele">Altitude</string>
    <string name="info_acc">Accuracy</string>
    <string name="info_speed">Speed</string>
    <string name="info_bearing">Bearing</string>
    <string name="info_sat">Satellites</string>
    <string name="info_time">Fix time</string>
    <string name="info_x" translatable="false">X</string>
    <string name="info_y" translatable="false">Y</string>
    <string name="info_z" translatable="false">Z</string>
    <string name="info_azimuth" translatable="false">Azimuth</string>
    <string name="info_pitch" translatable="false">Pitch</string>
    <string name="info_roll" translatable="false">Roll</string>
    <string name="info_dbm">dBm</string>
    <string name="info_ms2">m/s²</string>
    <string name="info_kmh">km/h</string>
    <string name="info_tesla" translatable="false">µT</string>
    <string name="info_meter">m</string>
    <string name="info_rads">rad/s</string>
    <string name="info_degree" translatable="false">°</string>
    <string name="info_db">dB</string>
    <string name="info_neighbours">"Neighbours: "</string>
    <string name="info_active">"Active: "</string>
    <string name="info_expand">expand</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="ngw_delete">Delete account</string>
    <string name="ngw_add">Add account</string>
    <string name="ngw_auto_sync">Auto sync</string>
    <string name="ngw_auto_sync_period">Sync period</string>
    <string name="ngid_account_new">Sign up</string>
    <string name="ngid_account_ask">Do not have account?</string>
</resources>