<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ******************************************************************************
  ~ Project: NextGIS Logger
  ~ Purpose: Productive data logger for Android
  ~ Author:  Nikita Kirin
  ~ Author:  Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright © 2014-2016 NextGIS
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~ ******************************************************************************
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <View
            style="@style/horizontal_divider"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/tv_sessions"
            style="@style/tv_header"
            android:text="@string/title_activity_sessions"/>

        <View
            style="@style/horizontal_divider"
            android:layout_below="@id/tv_sessions"/>

        <View
            android:id="@+id/v_vertical_line"
            style="@style/vertical_divider"
            android:layout_below="@id/tv_sessions"/>

        <Button
            android:id="@+id/btn_session"
            style="@style/btn_main"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_sessions"
            android:layout_toLeftOf="@id/v_vertical_line"
            android:layout_toStartOf="@id/v_vertical_line"/>

        <Button
            android:id="@+id/btn_sessions"
            style="@style/btn_main"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_sessions"
            android:layout_toEndOf="@id/v_vertical_line"
            android:layout_toRightOf="@id/v_vertical_line"
            android:text="@string/btn_sessions_manage"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_modes"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <View
            style="@style/horizontal_divider"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/tv_modes"
            style="@style/tv_header"
            android:text="@string/tv_modes"/>

        <View
            style="@style/horizontal_divider"
            android:layout_below="@id/tv_modes"/>

        <View
            android:id="@+id/v_vertical_line2"
            style="@style/vertical_divider"
            android:layout_below="@id/tv_modes"/>

        <Button
            android:id="@+id/btn_service_onoff"
            style="@style/btn_main"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_modes"
            android:layout_toLeftOf="@id/v_vertical_line2"
            android:layout_toStartOf="@id/v_vertical_line2"/>

        <Button
            android:id="@+id/btn_mark"
            style="@style/btn_main"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_modes"
            android:layout_toEndOf="@id/v_vertical_line2"
            android:layout_toRightOf="@id/v_vertical_line2"
            android:text="@string/btn_save_mark"/>
    </RelativeLayout>

    <LinearLayout style="@style/ll_session_info">

        <TextView
            android:id="@+id/tv_current_session"
            style="@style/tv_session_info"
            android:text="@string/session_name"/>

        <TextView
            android:id="@+id/tv_current_session_name"
            style="@style/tv_session_value"/>
    </LinearLayout>

    <LinearLayout style="@style/ll_session_info">

        <TextView
            android:id="@+id/tv_logger_started"
            style="@style/tv_session_info"
            android:text="@string/logger_started"/>

        <TextView
            android:id="@+id/tv_logger_started_time"
            style="@style/tv_session_value"/>
    </LinearLayout>

    <LinearLayout style="@style/ll_session_info">

        <TextView
            android:id="@+id/tv_logger_finished"
            style="@style/tv_session_info"
            android:text="@string/logger_finished"/>

        <TextView
            android:id="@+id/tv_logger_finished_time"
            style="@style/tv_session_value"/>
    </LinearLayout>

    <LinearLayout style="@style/ll_session_info">

        <TextView
            android:id="@+id/tv_records_collected"
            style="@style/tv_session_info"
            android:text="@string/records_collected"/>

        <TextView
            android:id="@+id/tv_records_collected_count"
            style="@style/tv_session_value"/>
    </LinearLayout>

    <LinearLayout style="@style/ll_session_info">

        <TextView
            android:id="@+id/tv_marks_collected"
            style="@style/tv_session_info"
            android:text="@string/marks_collected"/>

        <TextView
            android:id="@+id/tv_marks_collected_count"
            style="@style/tv_session_value"/>
    </LinearLayout>
</LinearLayout>