<?xml version="1.0" encoding="utf-8"?><!--
  ~ ******************************************************************************
  ~ Project: NextGIS Logger
  ~ Purpose: Productive data logger for Android
  ~ Author:  Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright © 2016-2017 NextGIS
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~ ******************************************************************************
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.nextgis.logger.ui.fragment.MainPreferenceFragment"
        android:title="@string/settings_main"/>
    <header
        android:fragment="com.nextgis.logger.ui.fragment.SensorsPreferenceFragment"
        android:title="@string/settings_sensors"/>
    <header
        android:fragment="com.nextgis.logger.ui.fragment.AccountPreferenceFragment"
        android:title="@string/settings_account"/>
</preference-headers>